--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "tsc && node build/index.js",
+    "start.dev": "./node_modules/.bin/tsc-watch --onSuccess \"nodemon ./build/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,11 +15,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/prop-types": "^15.7.4",
     "bcryptjs": "^2.4.3",
     "check-env": "^1.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.12.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.9"
+    "mongoose": "^6.0.9",
+    "prop-types": "^15.7.2",
+    "tsc-watch": "^4.5.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
