--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/prop-types": "^15.7.4",
     "bcryptjs": "^2.4.3",
     "check-env": "^1.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.2",
